# facenotebook-test-project

./: .gitignore  README.md  manage.py  pyproject.toml
facenotebook/: settings.py  urls.py  wsgi.py
facenotebook/people/: helpers.py  redis_db.py  urls.py  views.py
facenotebook/people/api/: apiviews.py  serializers.py
facenotebook/people/templates/: add_person_form.html  base.html  search_person_form.html
